[package]
edition = "2021"
name = "biscuit-actix-middleware"
version = "0.3.0-alpha.3"

license = "Apache-2.0"

documentation = "https://docs.rs/biscuit-actix-middleware/"
readme = "README.md"
repository = "https://github.com/eclipse-biscuit/biscuit-actix-middleware"

description = "Biscuit middleware for actix-web."

categories = ["asynchronous", "web-programming"]
keywords = ["http", "actix-web", "biscuit", "token", "authorization"]

[dependencies]
actix-web = {version = "4.3.1", default-features = false, features = [
  "macros",
]}
actix-web-httpauth = "0.8.0"
biscuit-auth = {version = "6.0.0", default-features = false, features = ["datalog-macro"]}
derive_more = {version = "2.0.1", default-features = false, features = ["display"]}
futures-util = {version = "0.3.28", default-features = false}
time = {version = "0.3.20", default-features = false}
tracing = {version = "0.1.37", default-features = false, optional = true}

[dev-dependencies]
biscuit-auth = {version = "6.0.0"}
tracing-actix-web = "0.7.3"
tracing-subscriber = {version = "0.3.16", features = ["env-filter"]}
